[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
nom = "7.1.3"
num = "0.4.1"
petgraph = "0.6.4"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
colored = "2.0.4"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"

